--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
   </div>
 
   <script>
-    const url = "https://script.google.com/macros/s/AKfycbw8PnNd4-kY5Fw8RrCE2Uwde3qGs_zv5DDmqq_fd8bjHQaPVPp5urOh79olP6YsrcBV0A/exec"; // Reemplaza con tu WebApp
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyQOhT5qTsdRHChOVEhSaVsi3I5kxoPddZxWAeJm1LH8OQ5RyLQ-LygIc7SVF6O8dpGag/exec"; // Reemplaza con tu WebApp
 
     let ticketsData = [];
 
