Update WEB_APP_URL in index.html
ùujpjjñ

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 
   <script>
     // 🔥 REEMPLAZA ESTA URL CON LA CORRECTA
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbx6wHZkVzNrdirqH2ops0u0ADkjx3Wkjz1FeIQUrS0tqXVA-DgAqUvti9lgCV68IfpirQ/exec";
+    const WEB_APP_URL = "wsedrtyuiop";
 
     let ticketsData = [];
 
